# epistemically-eval

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/cases/: sample_cases.jsonl  user_cases_draft.jsonl  user_cases_template.md
data/results/: defeaters_v2_results_claude-haiku-4-5.csv  defeaters_v2_results_claude-opus-4-8.csv  defeaters_v2_results_claude-sonnet-5.csv  defeaters_v2_results_claude-sonnet-5_retry.csv  defeaters_v2_results_gemini-2.5-pro.csv  defeaters_v2_results_gemini-2.5-pro_retry.csv  defeaters_v2_results_gpt-4o-mini.csv  defeaters_v2_results_gpt-5-mini.csv  epistemic_luck_v2_results_claude-haiku-4-5.csv  epistemic_luck_v2_results_claude-opus-4-8.csv  epistemic_luck_v2_results_claude-sonnet-5.csv  epistemic_luck_v2_results_gemini-2.5-pro.csv  epistemic_luck_v2_results_gpt-4o-mini.csv  epistemic_luck_v2_results_gpt-5-mini.csv  sample_results.csv  user_cases_results.csv  user_cases_results_claude-haiku-4-5.csv  user_cases_results_claude-opus-4-8.csv  user_cases_results_claude-sonnet-5.csv  user_cases_results_gemini-2.5-flash-lite.csv  user_cases_results_gemini-2.5-flash-lite_retry.csv  user_cases_results_gemini-2.5-flash-lite_retry2.csv  user_cases_results_gemini-2.5-pro.csv  user_cases_results_gpt-4o-mini.csv  user_cases_results_gpt-5-mini.csv
docs/: methodology.md  related_work.md
scripts/: run_eval.py  validate_cases.py
src/epistemically/: __init__.py  analysis.py  app_utils.py  bootstrap.py  dataset.py  defeaters.py  labels.py  prompts.py  schemas.py  scoring.py
(+5 files in other folders)
